--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,15 @@
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.0",
         "illuminate/contracts": "^8.0",
-        "myclabs/php-enum": "^1.8",
-        "vimeo/psalm": "^4.6"
+        "myclabs/php-enum": "^1.8"
+
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.13",
         "pestphp/pest": "^1.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.3",
+        "vimeo/psalm": "^4.6"
     },
     "autoload": {
         "psr-4": {
