Update description in composer to match GitHub.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "octohk/laravel-segment",
-    "description": "laravel-segment",
+    "description": "Laravel Segment is an opinionated, approach to integrating Segment into your Laravel application.",
     "keywords": [
         "octohook",
         "laravel-segment"
