--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.0",
-        "illuminate/contracts": "^8.0",
+        "illuminate/contracts": "^8.0|^9.0",
         "myclabs/php-enum": "^1.8"
 
     },
