--- a/.github/workflows/style-fixer.yml
+++ b/.github/workflows/style-fixer.yml
@@ -3,7 +3,7 @@ name: Check & fix styling
 on: [push]
 
 jobs:
-  php-cs-fixer:
+  style-fixer:
     runs-on: ubuntu-latest
 
     steps:
@@ -12,10 +12,11 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Run PHP CS Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
-        with:
-          args: --config=.php_cs.dist --allow-risky=yes
+      - name: Install dependencies
+        run: composer install
+
+      - name: Run Pint
+        run: vendor/bin/pint
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
