--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,12 @@
 
     },
     "require-dev": {
+        "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^6.13",
         "pestphp/pest": "^1.0",
-        "phpunit/phpunit": "^9.3",
-        "vimeo/psalm": "^4.6"
+        "phpstan/phpstan": "^1.8",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
