--- a/composer.json
+++ b/composer.json
@@ -14,18 +14,17 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
-        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/contracts": "^9.0",
         "myclabs/php-enum": "^1.8"
-
     },
     "require-dev": {
         "laravel/pint": "^1.2",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^6.13",
+        "nunomaduro/larastan": "^2.0",
+        "orchestra/testbench": "^7.11",
         "pestphp/pest": "^1.0",
-        "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
