Upgrade requirements and actions

--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,14 +1,14 @@
-name: Psalm
+name: Static Analysis
 
 on:
   push:
     paths:
       - '**.php'
-      - 'psalm.xml.dist'
+      - 'phpstan.neon.dist'
 
 jobs:
   psalm:
-    name: psalm
+    name: static-analysis
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +16,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.0'
+          php-version: '8.1'
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick
           coverage: none
 
@@ -29,5 +29,5 @@ jobs:
       - name: Run composer install
         run: composer install -n --prefer-dist
 
-      - name: Run psalm
-        run: ./vendor/bin/psalm --output-format=github
+      - name: Run phpstan
+        run: ./vendor/bin/phpstan --error-format=github
