--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -1,4 +1,4 @@
-name: Check & fix styling
+name: Code Style
 
 on: [push]
 
@@ -11,11 +11,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-
-      - name: Run PHP CS Fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
-        with:
-          args: --config=.php_cs.dist --allow-risky=yes
 
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v4
