--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,15 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "guzzlehttp/guzzle": "^7.0",
-        "illuminate/contracts": "^8.0|^9.0|^10.0",
-        "myclabs/php-enum": "^1.8"
+        "illuminate/contracts": "^9.0|^10.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.10",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^6.13",
+        "nunomaduro/larastan": "^2.0",
+        "orchestra/testbench": "^7.25|^8.5",
         "pestphp/pest": "^1.0",
         "phpunit/phpunit": "^9.3",
         "vimeo/psalm": "^4.6"
