--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,9 @@
         "laravel/pint": "^1.10",
         "mockery/mockery": "^1.4",
         "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^7.25|^8.5",
-        "pestphp/pest": "^1.0",
-        "phpunit/phpunit": "^9.3",
-        "vimeo/psalm": "^4.6"
+        "orchestra/testbench": "^7.25|^8.5|^9.0",
+        "pestphp/pest": "^2.0",
+        "vimeo/psalm": "^5.24"
     },
     "autoload": {
         "psr-4": {
