--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -1,6 +1,6 @@
 name: Code Style
 
-on: [push]
+on: [pull_request]
 
 jobs:
   code-style:
@@ -13,7 +13,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: '8.2'
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
 
