--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: run-tests
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   test:
@@ -9,9 +9,9 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.3]
+        php: ['8.2','8.3', '8.4']
         laravel: [11.*]
-        stability: [prefer-stable]
+        stability: ['prefer-stable']
         include:
           - laravel: 11.*
             testbench: 9.*
