--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,12 +1,11 @@
 includes:
-    - ./vendor/nunomaduro/larastan/extension.neon
+    - vendor/larastan/larastan/extension.neon
+    - vendor/nesbot/carbon/extension.neon
 
 parameters:
 
     paths:
         - src/
 
-    # Level 9 is the highest level
+    # Level 10 is the highest level
     level: 6
-
-    checkGenericClassInNonGenericObjectType: false
