--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         "illuminate/contracts": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
+        "larastan/larastan": "^3.3",
         "laravel/pint": "^1.18",
         "mockery/mockery": "^1.6",
-        "nunomaduro/larastan": "^2.0",
         "orchestra/testbench": "^8.5|^9.0|^10.0",
         "pestphp/pest": "^2.36|^3.7"
     },
