--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,14 @@
     "require": {
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.8",
-        "illuminate/contracts": "^10.0|^11.0|^12.0"
+        "illuminate/contracts": "^11.0|^12.0"
     },
     "require-dev": {
         "larastan/larastan": "^3.3",
         "laravel/pint": "^1.18",
         "mockery/mockery": "^1.6",
-        "orchestra/testbench": "^8.5|^9.0|^10.0",
-        "pestphp/pest": "^2.36|^3.7"
+        "orchestra/testbench": "^9.0|^10.0",
+        "pestphp/pest": "^3.7"
     },
     "autoload": {
         "psr-4": {
